--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,8 +1,33 @@
 .App {
-  text-align: center;
+ text-align: center;
 }
 
-.App-logo {
+body{
+  margin: 0;
+  padding:0;
+  background-color: #e6e9de;
+}
+
+.main{
+  text-align: center;
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
+}
+
+.home,
+.reports,
+.products {
+  display: flex;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +60,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
