restyle login page

--- a/app/src/pages/Unauthed.css
+++ b/app/src/pages/Unauthed.css
@@ -30,7 +30,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
-.signup-form{
+.unauthed-form{
     display: flex;  
     flex-direction: column;
 }
@@ -48,6 +48,6 @@
     border: none;
 }
 
-.unauth-link{
+.unauthed-link{
     text-align: center;
 }
